--- a/Project/Send_Report _To_Prod_Team.xaml
+++ b/Project/Send_Report _To_Prod_Team.xaml
@@ -5,7 +5,7 @@
     <x:Property Name="in_reportDate" Type="InArgument(x:String)" />
   </x:Members>
   <sap2010:ExpressionActivityEditor.ExpressionActivityEditor>C#</sap2010:ExpressionActivityEditor.ExpressionActivityEditor>
-  <sap:VirtualizedContainerService.HintSize>817,1203</sap:VirtualizedContainerService.HintSize>
+  <sap:VirtualizedContainerService.HintSize>715,1203</sap:VirtualizedContainerService.HintSize>
   <sap2010:WorkflowViewState.IdRef>ActivityBuilder_1</sap2010:WorkflowViewState.IdRef>
   <TextExpression.NamespacesForImplementation>
     <sco:Collection x:TypeArguments="x:String">
@@ -88,7 +88,6 @@
       <AssemblyReference>Microsoft.Extensions.DependencyModel</AssemblyReference>
       <AssemblyReference>NPOI</AssemblyReference>
       <AssemblyReference>UiPath.Excel.Activities.Design</AssemblyReference>
-      <AssemblyReference>System.Runtime.WindowsRuntime</AssemblyReference>
     </sco:Collection>
   </TextExpression.ReferencesForImplementation>
   <Sequence DisplayName="Send_Job_Report" sap:VirtualizedContainerService.HintSize="510,1138" sap2010:WorkflowViewState.IdRef="Sequence_1">
@@ -395,7 +394,7 @@
             </InArgument>
           </Assign.Value>
         </Assign>
-        <ui:ReadTextFile DisplayName="Read Text File Email Set " FileName="Data\\EmailTemplates\\06_Email_Sent_Already.txt" sap:VirtualizedContainerService.HintSize="384,79" sap2010:WorkflowViewState.IdRef="ReadTextFile_2">
+        <ui:ReadTextFile DisplayName="Read Text File Email Set " FileName="Data\\EmailTemplates\\Successfully_Completed_PH1.txt" sap:VirtualizedContainerService.HintSize="384,79" sap2010:WorkflowViewState.IdRef="ReadTextFile_2">
           <ui:ReadTextFile.Content>
             <OutArgument x:TypeArguments="x:String">
               <mca:CSharpReference x:TypeArguments="x:String" sap2010:WorkflowViewState.IdRef="CSharpReference`1_35">EmailBody</mca:CSharpReference>
